--- a/src/tickets.html
+++ b/src/tickets.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Landing</title>
+    <title>Tickets</title>
     <link rel="stylesheet" href="./scss/main.scss">
+
   </head>
 
   <body>
-
-    <load src="./partials/main_landing.html"/>
+    <load src="./partials/header.html"/>
+    <load src="./partials/preview.html"/>
+    <load src="./partials/form.html"/>
     <load src="./partials/footer.html"/>
-   
+ 
   </body>
 </html>
