--- a/src/tickets.html
+++ b/src/tickets.html
@@ -13,8 +13,10 @@
 
   <body>
     <load src="./partials/header.html"/>
+    <main>
     <load src="./partials/preview.html"/>
     <load src="./partials/form.html"/>
+    </main>
     <load src="./partials/footer.html"/>
  
   </body>
