--- a/src/tickets.html
+++ b/src/tickets.html
@@ -14,7 +14,7 @@
 
   <body>
     <load src="./partials/header.html"/>
-    <main>
+    <main class="main__tickets">
     <load src="./partials/preview.html"/>
     <load src="./partials/form.html"/>
     </main>
