--- a/src/tickets.html
+++ b/src/tickets.html
@@ -19,6 +19,8 @@
     <load src="./partials/form.html"/>
     </main>
     <load src="./partials/footer.html"/>
+
+    <script src="./js/main.js"></script>
  
   </body>
 </html>
