changes in categories and final design preview

--- a/src/final_design.html
+++ b/src/final_design.html
@@ -12,8 +12,7 @@
 </head>
 <body>
 
-    <load src="./partials/categories.html" />
     <load src="./partials/preview.html"/>
-    
+    <script src="./src/js/main.js"></script>
 </body>
 </html>
