--- a/src/final_design.html
+++ b/src/final_design.html
@@ -13,6 +13,6 @@
 <body>
 
     <load src="./partials/preview.html"/>
-    <script src="./src/js/main.js"></script>
+    <script src="./js/3_final-design.js"></script>
 </body>
 </html>
