--- a/src/final_design.html
+++ b/src/final_design.html
@@ -6,13 +6,34 @@
     <title>Preview</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+AU+SA:wght@100..400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./scss/main.scss">
 </head>
 <body>
-
-    <load src="./partials/preview.html"/>
+    <main class="card">
+    <div class=" card__div category category__cinema js-preview">
+        <h2 class="title js-preview-title"></h2>
+        <img src="" alt="" class="image js-image-preview"/>
+        <p class="date js-preview-date"></p>
+        <p class="price js-preview-price"></p>
+        <div class="location js-preview-location">
+            <!--<i class="fa-solid fa-location-dot"></i> -->
+            <p></p>
+        </div>
+        <p class="web js-preview-web"></p>
+        <p class="sponsor js-preview-sponsor"></p>
+        <img src="" alt="" class="qr js-qr-preview">
+    
+    </div> 
+    </main>
+   
     <script src="./js/3_final-design.js"></script>
 </body>
 </html>
