added variables in final-design js file

--- a/src/final_design.html
+++ b/src/final_design.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <main class="card">
-    <div class=" card__div category category__cinema js-preview">
+    <div class=" card__div category  js-preview">
         <h2 class="title js-preview-title"></h2>
         <img src="" alt="" class="image js-image-preview"/>
         <p class="date js-preview-date"></p>
